# medicure

./: .gitignore  ACTION_PLAN.md  AUTHENTICATION_STATUS.md  COMPREHENSIVE_TESTING_STRATEGY.md  CURRENT_TESTING_STATUS.md  DOCTOR_AVAILABILITY_PLAN.md  FAANG_BEST_PRACTICES_APPLIED.md  FINAL_STATUS.md  FIXES_COMPLETED_DEC3.md  FIXES_NEEDED.md  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_READY.md  IMPLEMENTATION_SUMMARY.md  MANDATORY_WORKFLOW.md  MAP_SETUP.md  MOBILE_SETUP.md  PHASE1_PROGRESS.md  REMAINING_FIXES.md  ROLES_CAPABILITIES_AND_WORKFLOWS.md  RUN_ALL_TESTS.sh  SESSION_READY.md  START_BACKEND.sh  START_EXPO.sh  START_MOBILE.md  TESTING_GUIDE.md  TESTING_INFRASTRUCTURE_COMPLETE.md  TYPOGRAPHY_STANDARD.md  WHATSAPP_FIX.md  WHATSAPP_OTP_TODO.md  WHATSAPP_SETUP_GUIDE.md  WHATSAPP_SETUP_WALKTHROUGH.md  WHATSAPP_WORKING.md  add_auth_checks.sh  add_navigation_buttons.sh  check_expo_errors.sh  check_health.sh  fix_all_screens.sh  fix_all_screens_use_basescreen.sh  monitor.sh  (+29 more)
backend/: add_dob_migration.sql  api_endpoints.py  auth.py  auth_pg.py  check_doctors.py  create_base_tables.sql  create_doctor_tables.sql  create_geo_structure.sql  create_missing_tables.sql  database.py  doctor_search.py  drop_all_tables.sql  init_doctor_tables.py  main.py  pyproject.toml  quick_whatsapp_test.py  scrape_quito_doctors.py  seed_doctors.sql  seed_test_users.py  seed_test_users_simple.py  setup_whatsapp.py  test_auth.py  test_whatsapp_otp.py  twilio_otp.py  whatsapp_otp.py
frontend/: .detoxrc.js  .env.example  .gitignore  App.tsx  app.json  jest.config.js  (+4 more)
(+80 files in other folders)
